--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1756,13 +1756,14 @@ input, select, textarea {
 
 		.image.avatar48 {
 			width: 48px;
-			height: 48px;
-			background: #f00;
+			height: auto;
+			border-radius: 50%;
 		}
 
 			.image.avatar48 img {
 				width: 48px;
-				height: 48px;
+				height: auto;
+				border-radius: 50%;
 			}
 
 		.image.fit {
@@ -1948,7 +1949,7 @@ input, select, textarea {
 		color: #fff !important;
 		text-decoration: none;
 		padding: 0.75em 2.5em 0.75em 2.5em;
-		background-color: #8ebebc;
+		background-color: #c8e08e;
 		border: 0;
 		cursor: pointer;
 		background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
@@ -2248,7 +2249,7 @@ input, select, textarea {
 
 			#main > section.one {
 				background-color: #81918E;
-				background-image: url("../../images/banner.jpg");
+				background-image: url("../../images/sunflowerfield.jpg");
 			}
 
 			#main > section.two {
